--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ requires-python = ">=3.13"
 dependencies = [
     "django (>=5.1.5,<6.0.0)",
     "djangorestframework (>=3.15.2,<4.0.0)",
-    "pillow (>=11.1.0,<12.0.0)"
+    "pillow (>=11.1.0,<12.0.0)",
+    "drf-yasg (>=1.21.8,<2.0.0)"
 ]
 
 
