--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
-[project]
+[tool.poetry]
 name = "server"
 version = "0.1.0"
 description = ""
-authors = [{name = "devscarycat",email = "devscarycat@icloud.com"}]
+authors = [{name = "devscarycat", email = "devscarycat@icloud.com"}]
 license = "MIT"
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "django (>=5.1.5,<6.0.0)",
-    "djangorestframework (>=3.15.2,<4.0.0)",
-    "pillow (>=11.1.0,<12.0.0)",
-    "drf-yasg (>=1.21.8,<2.0.0)"
-]
 
+[tool.poetry.dependencies]
+python = ">=3.13"
+django = ">=5.1.5,<6.0.0"
+djangorestframework = ">=3.15.2,<4.0.0"
+pillow = ">=11.1.0,<12.0.0"
+drf-yasg = ">=1.21.8,<2.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
