[✨Feat] : pyproject.toml 파일의 저자 형식 변경

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "server"
 version = "0.1.0"
 description = ""
-authors = [{name = "devscarycat", email = "devscarycat@icloud.com"}]
+authors = ["devscarycat <devscarycat@icloud.com>"]
 license = "MIT"
 readme = "README.md"
 
