--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = ">=5.1.5,<6.0.0"
 djangorestframework = ">=3.15.2,<4.0.0"
 pillow = ">=11.1.0,<12.0.0"
 drf-yasg = ">=1.21.8,<2.0.0"
+djangorestframework-simplejwt = "^5.4.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
