[✨Feat] : CORS 헤더 추가 및 데이터베이스 마이그레이션 실행 작업 추가

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -30,6 +30,12 @@ jobs:
         run: |
           poetry install
 
+      - name: Add corsheaders explicitly
+        run: poetry add django-cors-headers
+
+      - name: Run database migrations
+        run: poetry run python manage.py migrate
+
       - name: Generate API documentation
         run: |
           poetry run python manage.py generate_swagger --format yaml > swagger.yaml
