--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.13"
+python = ">=3.10,<3.14
+
 django = ">=5.1.5,<6.0.0"
 djangorestframework = ">=3.15.2,<4.0.0"
 pillow = ">=11.1.0,<12.0.0"
