[✨Feat] : GitHub Actions 워크플로우에서 API 문서 생성을 위한 트리거 추가

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -1,5 +1,11 @@
 name: Generate API Documentation
 
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+
 jobs:
   build:
     runs-on: ubuntu-latest
