--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-24.04 # Ubuntu 24.04로 명시적 지정
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
