--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["devscarycat <devscarycat@icloud.com>"]
 license = "MIT"
-readme = "README.md"
+package-mode = false  # 이 라인 추가
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
