--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
-
 django = ">=5.1.5,<6.0.0"
 djangorestframework = ">=3.15.2,<4.0.0"
 pillow = ">=11.1.0,<12.0.0"
 drf-yasg = ">=1.21.8,<2.0.0"
 djangorestframework-simplejwt = "^5.4.0"
+django-cors-headers = "^4.6.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
