[🏝️Actions] : GitHub Actions에서 Google Cloud 인증 정보 설정 방식 수정 및 환경 변수 관리 개선

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -11,8 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    env:
-      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
     steps:
       - uses: actions/checkout@v2
 
@@ -35,9 +33,11 @@ jobs:
       - name: Set up Google Cloud Credentials
         run: |
           echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}' > google-credentials.json
-          echo "GOOGLE_APPLICATION_CREDENTIALS=google-credentials.json" >> $GITHUB_ENV
+        shell: bash
 
       - name: Generate API documentation
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: google-credentials.json
         run: |
           poetry run python manage.py generate_swagger --format yaml > swagger.yaml
           poetry run python manage.py generate_swagger --format json > swagger.json
