[🏝️Actions]: GitHub Actions에서 Google Cloud 인증 정보 설정 단계 수정

--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           poetry install
 
-      name: Set up Google Cloud Credentials
+      - name: Set up Google Cloud Credentials
         run: |
           echo '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}' > google-credentials.json
           echo "GOOGLE_APPLICATION_CREDENTIALS=${{ github.workspace }}/google-credentials.json" >> $GITHUB_ENV
