--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ google-auth = "^2.38.0"
 google-cloud-storage = "^3.0.0"
 python-dotenv = "^1.0.1"
 qrcode = "^8.0"
+celery = "^5.4.0"
+redis = "^5.2.1"
+django-celery-results = "^2.5.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
