[✨Feat]: 알림 기능 및 관련 모델, API, 시리얼라이저, 관리자 설정 제거; 재고 관리 기능 개선

--- a/todo.ini
+++ b/todo.ini
@@ -7,3 +7,11 @@
 
 1. 직원관리 API 추가
 2. 회사 관리자 혹은 오너만 볼수있는 직원명단 조회 API 추가
+
+
+/* -------- */
+
+일단 재고 기록 추적은 생성 완료
+추가적으로 나중에 디테일 또한 생성 해야함 - 진짜 나중
+
+오늘 해야할건 redis랑 celery 확인함과 동시에 (사용법도 모르겠음) 재고가 부족해지면 notification에 알람 갈수있게금  
