--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,14 @@ python = ">=3.10,<3.14"
 django = ">=5.1.5,<6.0.0"
 djangorestframework = ">=3.15.2,<4.0.0"
 pillow = ">=11.1.0,<12.0.0"
-drf-yasg = ">=1.21.8,<2.0.0"
 djangorestframework-simplejwt = "^5.4.0"
 django-cors-headers = "^4.6.0"
-django-storages = {extras = ["google"], version = "^1.14.4"}
 google-auth = "^2.38.0"
 google-cloud-storage = "^3.0.0"
 python-dotenv = "^1.0.1"
 qrcode = "^8.0"
-celery = "^5.4.0"
-redis = "^5.2.1"
-django-celery-results = "^2.5.1"
+drf-yasg = "^1.21.10"
+python-dateutil = "^2.9.0.post0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
