[✨Feat]: 알림 기능 추가 및 관련 모델, API, 시리얼라이저, 관리자 설정 구현; 새로운 직원 및 제품 등록 시 알림 생성

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ python-dotenv = "^1.0.1"
 qrcode = "^8.0"
 drf-yasg = "^1.21.10"
 python-dateutil = "^2.9.0.post0"
+celery = "^5.5.0"
+redis = "^5.2.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
