deploy: 03d06a72f5bc6970e55332245e6f1cb9cd47b949

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,15 @@
 [phases.setup]
 nixPkgs = ['python312', 'poetry']
+aptPkgs = ['libpq-dev', 'build-essential', 'libffi-dev'] 
 
 [phases.install]
-cmds = ['python -m venv --copies /opt/venv', '. /opt/venv/bin/activate', 'pip install poetry==2.1.2', 'poetry install --no-dev --no-interaction --no-ansi']
+cmds = [
+  'python -m venv --copies /opt/venv',
+  '. /opt/venv/bin/activate',
+  'pip install poetry==2.1.2',
+  'poetry config virtualenvs.create false',
+  'poetry install --only main --no-interaction --no-ansi'
+]
 
 [phases.build]
 cmds = ['poetry run python manage.py collectstatic --noinput']
