--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,6 @@
 [phases.setup]
 nixPkgs = ['python312', 'poetry']
-aptPkgs = ['libpq-dev', 'build-essential', 'libffi-dev'] 
+aptPkgs = ['libpq-dev', 'build-essential', 'libffi-dev']
 
 [phases.install]
 cmds = [
@@ -12,7 +12,7 @@ cmds = [
 ]
 
 [phases.build]
-cmds = ['poetry run python manage.py collectstatic --noinput']
+cmds = ['. /opt/venv/bin/activate && poetry run python manage.py collectstatic --noinput']
 
 [start]
-cmd = '. /opt/venv/bin/activate && gunicorn config.wsgi:application --bind 0.0.0.0:$PORT'
+cmd = '/opt/venv/bin/gunicorn config.wsgi:application --bind 0.0.0.0:$PORT'
