deploy: dc099cc57c7c4edb0eb6e2e3f4565a0ed973b984

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,7 +8,7 @@ cmds = [
   '. /opt/venv/bin/activate',
   'pip install poetry==2.1.2',
   'poetry config virtualenvs.create false',
-  'poetry install --only main --no-interaction --no-ansi'
+  'poetry install --only master --no-interaction --no-ansi'
 ]
 
 [phases.build]
