--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10,<3.14"
 django = ">=5.1.5,<6.0.0"
 djangorestframework = ">=3.15.2,<4.0.0"
 pillow = ">=11.1.0,<12.0.0"
@@ -21,9 +21,6 @@ drf-yasg = "^1.21.10"
 python-dateutil = "^2.9.0.post0"
 celery = "^5.5.0"
 redis = "^5.2.1"
-dj-database-url = "^2.3.0"
-psycopg = { extras = ["binary"], version = "^3.2.1" }
-gunicorn = "^23.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
