--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,9 @@ drf-yasg = "^1.21.10"
 python-dateutil = "^2.9.0.post0"
 celery = "^5.5.0"
 redis = "^5.2.1"
-dj-database-url = "^2.3.0"
-psycopg2-binary = "^2.9.10"
+dj-database-url = "^2.1.0"
+psycopg2-binary = "^2.9.9"
+gunicorn = "^22.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
