--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,13 @@ drf-yasg = "^1.21.10"
 python-dateutil = "^2.9.0.post0"
 celery = "^5.5.0"
 redis = "^5.2.1"
+gunicorn = "^23.0.0"
+psycopg2-binary = "^2.9.10"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
