--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,5 +7,11 @@ cmds = [
     '. /opt/venv/bin/activate',
     'pip install poetry>=1.8.0',
     'poetry config virtualenvs.create false',
-    'poetry install --no-dev --no-interaction --no-ansi'
+    'poetry install --only main --no-interaction --no-ansi'
 ]
+
+[phases.build]
+cmds = ['python manage.py collectstatic --noinput']
+
+[start]
+cmd = 'gunicorn config.wsgi:application --workers 4'
