--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ celery = "^5.5.0"
 redis = "^5.2.1"
 psycopg2-binary = "^2.9.10"
 python-decouple = "^3.8"
+gunicorn = "^23.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
