--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ google-cloud-storage==3.1.0 ; python_version >= "3.10" and python_version < "3.1
 google-crc32c==1.6.0 ; python_version >= "3.10" and python_version < "3.14"
 google-resumable-media==2.7.2 ; python_version >= "3.10" and python_version < "3.14"
 googleapis-common-protos==1.68.0 ; python_version >= "3.10" and python_version < "3.14"
+gunicorn==23.0.0 ; python_version >= "3.10" and python_version < "3.14"
 idna==3.10 ; python_version >= "3.10" and python_version < "3.14"
 inflection==0.5.1 ; python_version >= "3.10" and python_version < "3.14"
 kombu==5.5.2 ; python_version >= "3.10" and python_version < "3.14"
