--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ redis = "^5.2.1"
 psycopg2-binary = "^2.9.10"
 python-decouple = "^3.8"
 gunicorn = "^23.0.0"
+whitenoise = "^6.9.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
