--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,4 @@ uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "3.14"
 urllib3==2.3.0 ; python_version >= "3.10" and python_version < "3.14"
 vine==5.1.0 ; python_version >= "3.10" and python_version < "3.14"
 wcwidth==0.2.13 ; python_version >= "3.10" and python_version < "3.14"
+whitenoise==6.9.0 ; python_version >= "3.10" and python_version < "3.14"
