--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           poetry install
+          poetry add pyyaml
 
       - name: Install yamllint
         run: |
@@ -54,19 +55,30 @@ jobs:
           echo "=== swagger.json 내용 ==="
           cat swagger.json
 
-      - name: Fix comma spacing in swagger.yaml
+      - name: Format swagger.yaml
         run: |
-          sed -i 's/,/, /g' swagger.yaml
+          poetry run python -c "
+import yaml
+with open('swagger.yaml', 'r') as f:
+    data = yaml.safe_load(f)
+with open('swagger.yaml', 'w') as f:
+    yaml.dump(data, f, allow_unicode=True, width=120, sort_keys=False)
+"
 
       - name: Debug swagger.yaml
         run: |
           head -n 10 swagger.yaml
-          echo "Line 3 content:"
-          sed -n '3p' swagger.yaml
+          echo "Line 4 content:"
+          sed -n '4p' swagger.yaml
 
       - name: Validate YAML
         run: |
           yamllint -c .yamllint.yml swagger.yaml
+
+      - name: Validate Swagger YAML
+        run: |
+          npm install -g swagger-cli
+          swagger-cli validate swagger.yaml
 
       - name: Install redoc-cli
         run: |
