--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -29,17 +29,27 @@ jobs:
       - name: Install dependencies
         run: |
           poetry install
+
       - name: Generate API documentation
         env:
           GOOGLE_APPLICATION_CREDENTIALS: google-credentials.json
         run: |
-          poetry run python manage.py generate_swagger --format yaml > swagger_temp.yaml
-          tail -n +2 swagger_temp.yaml > swagger.yaml
+          poetry run python manage.py generate_swagger --format yaml > swagger.yaml
           poetry run python manage.py generate_swagger --format json > swagger.json
-      - name: Convert Swagger to HTML
-        uses: seeebiii/redoc-cli-github-action@v10
+
+      - name: Validate swagger.yaml
+        run: |
+          poetry run python -c "import yaml; yaml.safe_load(open('swagger.yaml'))"
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          args: "bundle -o api-docs.html swagger.yaml"
+          node-version: "16"
+
+      - name: Convert Swagger to HTML
+        run: |
+          npm install -g @redocly/cli
+          redocly bundle -o api-docs.html swagger.yaml
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
