--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -34,12 +34,12 @@ jobs:
         env:
           GOOGLE_APPLICATION_CREDENTIALS: google-credentials.json
         run: |
-          poetry run python manage.py generate_swagger --format yaml > swagger_temp.yaml
-          tail -n +2 swagger_temp.yaml > swagger.yaml
+          poetry run python manage.py generate_swagger --format yaml > swagger.yaml
           poetry run python manage.py generate_swagger --format json > swagger.json
+          cat swagger.yaml  # 디버깅용 출력
 
       - name: Convert Swagger to HTML
-        uses: seeebiii/redoc-cli-github-action@v10
+        uses: seeebiii/redoc-cli-github-action@v11
         with:
           args: "bundle -o api-docs.html swagger.yaml"
 
