--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -39,9 +39,13 @@ jobs:
           cat swagger.yaml  # 디버깅용 출력
 
       - name: Convert Swagger to HTML
-        uses: seeebiii/redoc-cli-github-action@v11
+        uses: seeebiii/redoc-cli-github-action@v10
         with:
           args: "bundle -o api-docs.html swagger.yaml"
+
+      - name: Check generated files
+        run: |
+          ls -l api-docs.html  # 생성된 파일 확인
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
