--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ python-dateutil = "^2.9.0.post0"
 celery = "^5.5.0"
 redis = "^5.2.1"
 python-decouple = "^3.8"
+gunicorn = "^23.0.0"
+whitenoise = "^6.9.0"
+psycopg2-binary = "^2.9.10"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
